--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="col-md-6 pad0">
                             <div class="avenue-content-desc avenue-desc">
                               <p>
-                                  Since 25 years that’s what we have been doing, focusing on every little aspect and refining them, year on year. We have been attentively looking around, to curate fine experience and creating warm, welcoming abodes. And attentively listening to our guests to enrich the moments they spend with us. A peek into our properties will tell you how unique and distinct they are from each other, but one thing remains consistent, the smile that you would take back home.
+                                25 years is a long time, but we are not in a hurry. It’s all about patiently curating the finest experiences, focusing on every little thing and refining them. For us, it’s all about paying attention to every little detail to create warm, welcoming abodes. Take a peek into our spaces that are so unique and distinct from each other. But, one thing remains constant, making people feel the importance of taking a pause. 
                               </p>
                             </div>
                     </div>
@@ -67,7 +67,7 @@
             </div>
             <div class="avenue-content-image">
                     <div class="own-country">
-                        <p>Experience the God’s own Country</p>
+                        <p>Kerala, breathe it in. </p>
                     </div>
             </div>
             <!-- Card Section -->
@@ -78,7 +78,7 @@
                     </div>
                     <div class="avenue-card-desc">
                         <label>Avenue Rainforest, Athirapally</label>
-                        <span>Stand still opposite the magnificent Athirapally falls</span>
+                        <span>Away from the city, it faces the magnanimous Athirapally waterfalls, and is surrounded by pure, rich nature. </span>
                     </div>
                 </div>
                 <div class="avenue-card">
@@ -87,7 +87,7 @@
                         </div>
                         <div class="avenue-card-desc">
                             <label>Avenue Regent, Athirapally</label>
-                            <span>The old and the new. Everything that’s great about Cochin.</span>
+                            <span>Just the right blend of lavish living and cozy environment, for business and leisure. </span>
                         </div>
                     </div>
                     <div class="avenue-card">
@@ -96,7 +96,7 @@
                             </div>
                             <div class="avenue-card-desc">
                                 <label>Olam, Kochi Kerala</label>
-                                <span>Nothing like sailing in the backwater to catch the gorgeous sunset</span>
+                                <span>See the colours of calm and listen to how the peace sounds. The sunset in front of our cottages is rare, it’s sublime. </span>
                             </div>
                         </div>
                         <div class="avenue-card">
@@ -105,7 +105,7 @@
                                 </div>
                                 <div class="avenue-card-desc">
                                     <label>Avenue Center, Kochi Kerala</label>
-                                    <span>Explore the city of Kochi from the heart of the city. No better place to start</span>
+                                    <span>When in Kochi, be at the heart of the city. Immerse in comfort, while you dig into the local culture.</span>
                                 </div>
                             </div>
             </div>
