--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="avenue-content-section">
                     <div class="col-md-6 pad0">
                             <div class="avenue-content-heading">
-                              <h2>For us, it’s all about paying attention.</h2>
+                              <h2>There’s no rush. </h2>
                             </div>
                     </div>
                     <div class="col-md-6 pad0">
