--- a/index.html
+++ b/index.html
@@ -72,16 +72,19 @@
             </div>
             <!-- Card Section -->
             <div class="avenue-card-section owl-carousel">
+            <a href="http://rainforest.in" target="_blank">
                 <div class="avenue-card">
                     <div class="avenue-card-img">
                         <img src="./assets/images/waterfall.png">
                     </div>
                     <div class="avenue-card-desc">
-                        <label>Avenue Rainforest, Athirapally</label>
+                        <label>Rainforest, Athirapally</label>
                         <span>Away from the city, it faces the magnanimous Athirapally waterfalls, and is surrounded by pure, rich nature. </span>
                     </div>
                 </div>
-                <div class="avenue-card">
+            </a>
+                <a href="http://theavenueregent.com/" target="_blank">
+                    <div class="avenue-card">
                         <div class="avenue-card-img">
                             <img src="./assets/images/cheenavala.png">
                         </div>
@@ -90,6 +93,8 @@
                             <span>Just the right blend of lavish living and cozy environment, for business and leisure. </span>
                         </div>
                     </div>
+                </a>
+                <a href="http://olam.co.in/" target="_blank">
                     <div class="avenue-card">
                             <div class="avenue-card-img">
                                 <img src="./assets/images/olam.png">
@@ -99,6 +104,8 @@
                                 <span>See the colours of calm and listen to how the peace sounds. The sunset in front of our cottages is rare, it’s sublime. </span>
                             </div>
                         </div>
+                    </a>
+                    <a href="http://www.avenuecenter.com/" target="_blank">
                         <div class="avenue-card">
                                 <div class="avenue-card-img">
                                     <img src="./assets/images/kochi.png">
@@ -108,6 +115,7 @@
                                     <span>When in Kochi, be at the heart of the city. Immerse in comfort, while you dig into the local culture.</span>
                                 </div>
                             </div>
+                        </a>
             </div>
             <span class="line">
             </span>
