--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             <img src="./assets/images/cheenavala.png">
                         </div>
                         <div class="avenue-card-desc">
-                            <label>Avenue Regent, Athirapally</label>
+                            <label>Avenue Regent, Kochi</label>
                             <span>Just the right blend of lavish living and cozy environment, for business and leisure. </span>
                         </div>
                     </div>
