--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="col-md-6 pad0">
                             <div class="avenue-content-desc avenue-desc">
                               <p>
-                                25 years is a long time, but we are not in a hurry. It’s all about patiently curating the finest experiences, focusing on every little thing and refining them. For us, it’s all about paying attention to every little detail to create warm, welcoming abodes. Take a peek into our spaces that are so unique and distinct from each other. But, one thing remains constant, making people feel the importance of taking a pause. 
+                                25 years is a long time, but we are not in a hurry. It’s all about patiently curating the finest experiences, focusing on every little thing and refining them to create warm, welcoming abodes. Take a peek into our spaces that are so unique and distinct from each other. But, one thing remains constant, making people feel the importance of taking a pause. 
                               </p>
                             </div>
                     </div>
@@ -100,8 +100,8 @@
                                 <img src="./assets/images/olam.png">
                             </div>
                             <div class="avenue-card-desc">
-                                <label>Olam, Kochi Kerala</label>
-                                <span>See the colours of calm and listen to how the peace sounds. The sunset in front of our cottages is rare, it’s sublime. </span>
+                                <label>Olam, Kochi</label>
+                                <span>See the colours of calm and listen to how the peace sounds. The sunsets here are rare, they're sublime. </span>
                             </div>
                         </div>
                     </a>
@@ -111,7 +111,7 @@
                                     <img src="./assets/images/kochi.png">
                                 </div>
                                 <div class="avenue-card-desc">
-                                    <label>Avenue Center, Kochi Kerala</label>
+                                    <label>Avenue Center, Kochi </label>
                                     <span>When in Kochi, be at the heart of the city. Immerse in comfort, while you dig into the local culture.</span>
                                 </div>
                             </div>
